# py-condiments

./: .gitignore  AUDIT.md  DISCOVERY.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
data/: manifest.yaml
examples/: compare_R_vs_Python.ipynb  evolution.ipynb  function_by_function_R_parity.ipynb  tutorial_toy.ipynb  visualization_R_parity.ipynb
pycondiments/: __init__.py  imbalance.py  plotting.py  progression.py  topology.py  utils.py
tests/: _run_candidate.py  py_plot_driver.py  r_plot_driver.R  r_reference_driver.R  test_exact_match.py  test_smoke.py
tests/plot_compare/: df.csv  sd.csv
