[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycondiments"
version = "0.2.0"
description = "Pure-Python port of condiments — differential trajectory analysis across conditions (Roux de Bezieux et al. Nat Commun 2024)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zehua Zeng", email = "starlitnightly@163.com" }]
keywords = ["single-cell", "scRNA-seq", "trajectory", "condition", "condiments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
tradeseq = ["pytradeseq>=0.1.0"]

[project.urls]
Homepage = "https://github.com/omicverse/py-condiments"
Repository = "https://github.com/omicverse/py-condiments"
"Upstream R package" = "https://github.com/HectorRDB/condiments"

[tool.setuptools.packages.find]
include = ["pycondiments*"]
exclude = ["tests*", "examples*", "condiments-ref*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
